# distributedhardware_distributed_camera

./: AGENTS.md  CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  distributed_camera.diff  distributedcamera.gni  hisysevent.yaml
camera_hdf/hdi_impl/: BUILD.gn
camera_hdf/hdi_impl/include/dcamera_device/: dcamera_device.h  dmetadata_processor.h
camera_hdf/hdi_impl/include/dcamera_host/: dcamera_host.h
camera_hdf/hdi_impl/include/dcamera_provider/: dcamera_provider.h
camera_hdf/hdi_impl/include/dstream_operator/: dbuffer_manager.h  dcamera_steam.h  dimage_buffer.h  doffline_stream_operator.h  dstream_operator.h
camera_hdf/hdi_impl/include/utils/: constants.h  dcamera.h
camera_hdf/hdi_impl/src/dcamera_device/: dcamera_device.cpp  dmetadata_processor.cpp
camera_hdf/hdi_impl/src/dcamera_host/: dcamera_host.cpp
camera_hdf/hdi_impl/src/dcamera_provider/: dcamera_provider.cpp
camera_hdf/hdi_impl/src/dstream_operator/: dbuffer_manager.cpp  dcamera_steam.cpp  dimage_buffer.cpp  doffline_stream_operator.cpp  dstream_operator.cpp
camera_hdf/hdi_impl/src/utils/: dcamera.cpp
camera_hdf/hdi_impl/test/: BUILD.gn  common.cpp  common.h
camera_hdf/interfaces/hdi_ipc/client/: BUILD.gn
camera_hdf/interfaces/hdi_ipc/client/device/: dcamera_device_callback.cpp  dcamera_device_callback.h  dcamera_device_callback_stub.cpp  dcamera_device_callback_stub.h  dcamera_device_proxy.cpp  dcamera_device_proxy.h
camera_hdf/interfaces/hdi_ipc/client/host/: dcamera_host_callback.cpp  dcamera_host_callback.h  dcamera_host_callback_stub.cpp  dcamera_host_callback_stub.h  dcamera_host_proxy.cpp  dcamera_host_proxy.h
camera_hdf/interfaces/hdi_ipc/client/operator/: doffline_stream_operator_proxy.cpp  doffline_stream_operator_proxy.h  dstream_operator_callback.cpp  dstream_operator_callback.h  dstream_operator_callback_stub.cpp  dstream_operator_callback_stub.h  dstream_operator_proxy.cpp  dstream_operator_proxy.h
camera_hdf/interfaces/hdi_ipc/client/provider/: dcamera_provider_callback.cpp  dcamera_provider_callback.h  dcamera_provider_callback_stub.cpp  dcamera_provider_callback_stub.h  dcamera_provider_proxy.cpp  dcamera_provider_proxy.h
camera_hdf/interfaces/hdi_ipc/config/provider/: BUILD.gn  dcamera_provider_config.cpp
common/: BUILD.gn
common/distributed_camera_hap/: build-profile.json5  oh-package.json5
common/distributed_camera_hap/AppScope/: app.json5
common/distributed_camera_hap/entry/src/main/: module.json5
common/distributed_camera_hap/hvigor/: hvigor-config.json5
common/include/constants/: dcamera_ipc_interface_code.h  distributed_camera_constants.h  distributed_camera_errno.h
common/include/utils/: anonymous_string.h  data_buffer.h  dcamera_buffer_handle.h  dcamera_hidumper.h  dcamera_hisysevent_adapter.h  dcamera_hitrace_adapter.h  dcamera_index.h  dcamera_radar.h  dcamera_sa_process_state.h  dcamera_utils_tools.h  dh_log.h  distributed_hardware_log.h  image_converter.h
common/src/utils/: anonymous_string.cpp  data_buffer.cpp  dcamera_buffer_handle.cpp  dcamera_hidumper.cpp  dcamera_hisysevent_adapter.cpp  dcamera_hitrace_adapter.cpp  dcamera_radar.cpp  dcamera_sa_process_state.cpp  dcamera_utils_tools.cpp  dh_log.cpp
common/test/unittest/: BUILD.gn
common/test/unittest/common/utils/: BUILD.gn  data_buffer_test.cpp  dcamera_buffer_handle_test.cpp  dcamera_hidumper_test.cpp  dcamera_hisysevent_adapter_test.cpp  dcamera_radar_test.cpp  dcamera_utils_tools_test.cpp
interfaces/inner_kits/native_cpp/camera_sink/: BUILD.gn
interfaces/inner_kits/native_cpp/camera_sink/include/: dcamera_sink_handler.h  dcamera_sink_handler_ipc.h  dcamera_sink_load_callback.h  distributed_camera_sink_proxy.h  idistributed_camera_sink.h
interfaces/inner_kits/native_cpp/camera_sink/src/: dcamera_sink_handler.cpp  dcamera_sink_handler_ipc.cpp  dcamera_sink_load_callback.cpp  distributed_camera_sink_proxy.cpp
interfaces/inner_kits/native_cpp/camera_source/: BUILD.gn
interfaces/inner_kits/native_cpp/camera_source/include/: dcamera_hdf_operate.h  dcamera_source_handler.h  dcamera_source_handler_ipc.h  dcamera_source_load_callback.h  distributed_camera_source_proxy.h  idistributed_camera_source.h
services/cameraservice/cameraoperator/client/: BUILD.gn
services/cameraservice/cameraoperator/handler/: BUILD.gn
services/cameraservice/sinkservice/: BUILD.gn
services/cameraservice/sourceservice/: BUILD.gn  cfi_blocklist.txt
services/channel/: BUILD.gn
services/channel/include/: dcamera_channel_sink_impl.h  dcamera_channel_source_impl.h  dcamera_low_latency.h  dcamera_softbus_adapter.h  dcamera_softbus_latency.h  dcamera_softbus_session.h  icamera_channel.h  icamera_channel_listener.h
services/channel/include/allconnect/: dcamera_block_obj.h  dcamera_collaboration_manager_capi.h  distributed_camera_allconnect_manager.h
services/channel/src/: dcamera_channel_sink_impl.cpp  dcamera_channel_source_impl.cpp  dcamera_low_latency.cpp  dcamera_softbus_adapter.cpp  dcamera_softbus_latency.cpp  dcamera_softbus_session.cpp
services/channel/src/allconnect/: distributed_camera_allconnect_manager.cpp
services/channel/test/fuzztest/: BUILD.gn
services/channel/test/unittest/: BUILD.gn
services/data_process/: BUILD.gn  cfi_blocklist.txt
services/data_process/include/eventbus/: dcamera_codec_event.h  dcamera_pipeline_event.h
services/data_process/include/interfaces/: data_process_listener.h  idata_process_pipeline.h
services/data_process/include/pipeline/: abstract_data_process.h  dcamera_pipeline_sink.h  dcamera_pipeline_source.h
services/data_process/include/utils/: image_common_type.h  property_carrier.h
services/data_process/src/pipeline/: abstract_data_process.cpp  dcamera_pipeline_sink.cpp  dcamera_pipeline_source.cpp
services/data_process/src/utils/: image_common_type.cpp  property_carrier.cpp
services/data_process/test/unittest/: BUILD.gn
test/distributedcameraclienttest/: BUILD.gn  Test.json  dcamera_client_automatic_test.cpp  dcamera_client_demo.cpp  dcamera_client_demo.h
(+808 files in other folders)
