# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

distributedcamera_path = "//foundation/distributedhardware/distributed_camera"

distributedhardwarefwk_path =
    "//foundation/distributedhardware/distributed_hardware_fwk"

camera_hdf_path = "//drivers/peripheral"

camerastandard_path = "//foundation/multimedia/camera_framework"

mediastandard_path = "//foundation/multimedia/player_framework"

graphicstandard_path = "//foundation/graphic/graphic_2d"

common_path = "${distributedcamera_path}/common"

services_path = "${distributedcamera_path}/services"

innerkits_path = "${distributedcamera_path}/interfaces/inner_kits"

fwk_utils_path = "${distributedhardwarefwk_path}/utils"

fwk_common_path = "${distributedhardwarefwk_path}/common"

build_flags = [ "-Werror" ]

declare_args() {
  distributed_camera_common = true
}
