# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

ohos_shared_library("distributed_camera_utils") {
  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "include/constants",
    "include/utils",
  ]

  cflags = [
    "-fPIC",
    "-Wall",
  ]

  if (!distributed_camera_common) {
    cflags += [ "-DDCAMERA_MMAP_RESERVE" ]
  }

  sources = [
    "src/utils/anonymous_string.cpp",
    "src/utils/data_buffer.cpp",
    "src/utils/dcamera_buffer_handle.cpp",
    "src/utils/dcamera_hisysevent_adapter.cpp",
    "src/utils/dcamera_hitrace_adapter.cpp",
    "src/utils/dcamera_sa_process_state.cpp",
    "src/utils/dcamera_utils_tools.cpp",
    "src/utils/dh_log.cpp",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedcamerautils\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "graphic_chipsetsdk:buffer_handle",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
  ]

  cflags_cc = cflags
  relative_install_dir = "chipset-sdk"
  subsystem_name = "distributedhardware"

  part_name = "distributed_camera"
}
