# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

ohos_shared_library("distributed_camera_utils") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }
  stack_protector_ret = true
  include_dirs = [
    "include/constants",
    "include/utils",
    "${feeding_smoother_path}/base",
    "${feeding_smoother_path}/derived",
    "${services_path}/cameraservice/base/include",
  ]

  cflags = [
    "-fPIC",
    "-Wall",
  ]

  if (!distributed_camera_common) {
    cflags += [ "-DDCAMERA_MMAP_RESERVE" ]
  }

  sources = [
    "src/utils/anonymous_string.cpp",
    "src/utils/data_buffer.cpp",
    "src/utils/dcamera_buffer_handle.cpp",
    "src/utils/dcamera_hidumper.cpp",
    "src/utils/dcamera_hisysevent_adapter.cpp",
    "src/utils/dcamera_hitrace_adapter.cpp",
    "src/utils/dcamera_radar.cpp",
    "src/utils/dcamera_utils_tools.cpp",
    "src/utils/dh_log.cpp",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedcamerautils\"",
    "LOG_DOMAIN=0xD004150",
  ]

  ldflags = [
    "-fpie",
    "-Wl,-z,relro",
    "-Wl,-z,now",
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "dsoftbus:softbus_client",
    "ffrt:libffrt",
    "hdf_core:libhdi",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags_cc = cflags
  subsystem_name = "distributedhardware"

  part_name = "distributed_camera"
}
