# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

ohos_shared_library("distributed_camera_channel") {
  include_dirs = [
    "${av_transport_path}/common/include"
    "${fwk_common_path}/utils/include",
    "${services_path}/cameraservice/base/include",
  ]

  include_dirs += [
    "include",
    "${common_path}/include/constants",
    "${common_path}/include/utils",
    "//foundation//communication//dsoftbus//core//common//include",
    "${fwk_innerkits_path}/include",
    "//third_party/json/include",
    "${feeding_smoother_path}/base",
    "${feeding_smoother_path}/derived",
    "${feeding_smoother_path}/utils",
  ]

  sources = [
    "${services_path}/cameraservice/base/src/dcamera_sink_frame_info.cpp",
    "src/dcamera_channel_sink_impl.cpp",
    "src/dcamera_channel_source_impl.cpp",
    "src/dcamera_low_latency.cpp",
    "src/dcamera_softbus_adapter.cpp",
    "src/dcamera_softbus_latency.cpp",
    "src/dcamera_softbus_session.cpp",
  ]

  deps = [ "${common_path}:distributed_camera_utils" ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dcamerachannel\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_camera"
}
