# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")
import("//foundation/distributedhardware/distributedcamera/distributedcamera.gni")

ohos_executable("dcamera_hdi_sample") {
  install_enable = false
  sources = [ 
    "dcamera_hdi_sample.cpp",
    "common.cpp"
  ]
  cflags = [ "-Wall" ]
  cflags_cc = cflags
  include_dirs = [
    "${distributedcamera_hdf_path}/interfaces/include",
    "${distributedcamera_hdf_path}/interfaces/hdi_ipc/client/device",
    "${distributedcamera_hdf_path}/interfaces/hdi_ipc/client/host",
    "${distributedcamera_hdf_path}/interfaces/hdi_ipc/client/operator",
    "${distributedcamera_hdf_path}/interfaces/hdi_ipc/client/provider",
    "${distributedcamera_hdf_path}/interfaces/hdi_ipc/server/device",
    "${distributedcamera_hdf_path}/interfaces/hdi_ipc/server/host",
    "${distributedcamera_hdf_path}/interfaces/hdi_ipc/server/operator",
    "${distributedcamera_hdf_path}/interfaces/hdi_ipc/server/provider",
    "${distributedcamera_hdf_path}/hdi_impl/include/dcamera_device",
    "${distributedcamera_hdf_path}/hdi_impl/include/dcamera_host",
    "${distributedcamera_hdf_path}/hdi_impl/include/dcamera_provider",
    "${distributedcamera_hdf_path}/hdi_impl/include/dstream_operator",
    "${distributedcamera_hdf_path}/hdi_impl/include/utils",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include/",
    "${common_path}/include/constants",
    "${fwk_utils_path}/include",
    "${fwk_utils_path}/include/log",
    "${camera_hdf_path}/camera/interfaces/include",
    "${hdf_framework_path}/include/utils",
    "${hdf_uhdf_path}/include/hdi",
    "${hdf_uhdf_path}/osal/include",

    #producer
    "//foundation/graphic/standard/frameworks/surface/include",
    "//foundation/graphic/standard/interfaces/kits/surface",
    "//foundation/graphic/standard/utils/include",
    "//foundation/communication/ipc/ipc/native/src/core/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/multimedia/camera_standard/frameworks/native/metadata/include",

    "${innerkits_path}/native_cpp/camera_source/include",
    "${innerkits_path}/native_cpp/camera_source/include/callback",
    "${fwk_common_path}/utils/include",
  ]

  deps = [
    "${fwk_utils_path}:distributedhardwareutils",
    "${distributedcamera_hdf_path}/interfaces/hdi_ipc/client:distributed_camera_hdf_client",
    "${hdf_uhdf_path}/hdi:libhdi",
    "${fwk_utils_path}:distributedhardwareutils",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/graphic/standard/frameworks/surface:surface",
    "//drivers/peripheral/display/hal:hdi_display_gralloc",
    "//foundation/multimedia/camera_standard/frameworks/native/metadata:metadata",
    "${innerkits_path}/native_cpp/camera_source:distributed_camera_source_sdk",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "distributed_camera"
  subsystem_name = "distributedhardware"
}